feat: basic auth
